// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter util invalid inputs Genre by Genre 1`] = `
Object {
  "search": Object {},
}
`;

exports[`filter util invalid inputs Genre by inGenre 1`] = `
Object {
  "search": Object {
    "genre": Object {
      "condition": 0,
      "inGenres": Array [],
      "outGenres": Array [],
    },
    "name": Object {
      "condition": 1,
      "name": "",
    },
  },
}
`;

exports[`filter util invalid inputs Genre by outGenre 1`] = `
Object {
  "search": Object {
    "genre": Object {
      "condition": 0,
      "inGenres": Array [],
      "outGenres": Array [],
    },
    "name": Object {
      "condition": 1,
      "name": "",
    },
  },
}
`;

exports[`filter util invalid inputs Name by Name 1`] = `
Object {
  "search": Object {
    "genre": Object {
      "condition": 0,
      "inGenres": Array [],
      "outGenres": Array [],
    },
    "name": Object {
      "condition": 1,
      "name": "",
    },
  },
}
`;

exports[`filter util invalid inputs Name by Name condition 1`] = `
Object {
  "search": Object {
    "genre": Object {
      "condition": 0,
      "inGenres": Array [],
      "outGenres": Array [],
    },
    "name": Object {
      "condition": 1,
      "name": "",
    },
  },
}
`;

exports[`filter util invalid inputs Rating by Rating 1`] = `
Object {
  "search": Object {
    "genre": Object {
      "condition": 0,
      "inGenres": Array [],
      "outGenres": Array [],
    },
    "name": Object {
      "condition": 1,
      "name": "",
    },
    "rating": Object {},
  },
}
`;

exports[`filter util invalid inputs Rating by Rating from 1`] = `
Object {
  "search": Object {
    "genre": Object {
      "condition": 0,
      "inGenres": Array [],
      "outGenres": Array [],
    },
    "name": Object {
      "condition": 1,
      "name": "",
    },
    "rating": Object {
      "to": 5,
    },
  },
}
`;

exports[`filter util invalid inputs Rating by Rating to 1`] = `
Object {
  "search": Object {
    "genre": Object {
      "condition": 0,
      "inGenres": Array [],
      "outGenres": Array [],
    },
    "name": Object {
      "condition": 1,
      "name": "",
    },
    "rating": Object {
      "from": 4,
    },
  },
}
`;

exports[`filter util invalid inputs by Artist 1`] = `
Object {
  "search": Object {
    "artist": Object {
      "condition": 1,
      "name": "",
    },
    "genre": Object {
      "condition": 0,
      "inGenres": Array [],
      "outGenres": Array [],
    },
    "name": Object {
      "condition": 1,
      "name": "",
    },
  },
}
`;

exports[`filter util invalid inputs by Author 1`] = `
Object {
  "search": Object {
    "author": Object {
      "condition": 1,
      "name": "",
    },
    "genre": Object {
      "condition": 0,
      "inGenres": Array [],
      "outGenres": Array [],
    },
    "name": Object {
      "condition": 1,
      "name": "",
    },
  },
}
`;

exports[`filter util invalid inputs by Mature 1`] = `
Object {
  "search": Object {
    "genre": Object {
      "condition": 0,
      "inGenres": Array [],
      "outGenres": Array [],
    },
    "name": Object {
      "condition": 1,
      "name": "",
    },
  },
}
`;

exports[`filter util invalid inputs by Released 1`] = `
Object {
  "search": Object {
    "genre": Object {
      "condition": 0,
      "inGenres": Array [],
      "outGenres": Array [],
    },
    "name": Object {
      "condition": 1,
      "name": "",
    },
    "released": Object {
      "condition": 0,
      "value": null,
    },
  },
}
`;

exports[`filter util invalid inputs by Status 1`] = `
Object {
  "search": Object {
    "genre": Object {
      "condition": 0,
      "inGenres": Array [],
      "outGenres": Array [],
    },
    "name": Object {
      "condition": 1,
      "name": "",
    },
  },
}
`;

exports[`filter util invalid inputs by type 1`] = `
Object {
  "search": Object {
    "genre": Object {
      "condition": 0,
      "inGenres": Array [],
      "outGenres": Array [],
    },
    "name": Object {
      "condition": 1,
      "name": "",
    },
  },
}
`;

exports[`filter util should sanitize filter: string 1`] = `
Object {
  "search": Object {
    "name": Object {
      "condition": 1,
      "name": "gintama",
    },
  },
}
`;

exports[`filter util should sanitize filter: user search  1`] = `
Object {
  "search": Object {
    "artist": Object {
      "condition": 1,
      "name": "Sorachi Hideaki",
    },
    "author": Object {
      "condition": 1,
      "name": "Sorachi Hideaki",
    },
    "genre": Object {
      "condition": 0,
      "inGenres": Array [
        "Shounen",
        "Action",
      ],
      "outGenres": Array [],
    },
    "mature": true,
    "name": Object {
      "condition": 1,
      "name": "gintama",
    },
    "rating": Object {
      "from": 1,
    },
    "released": Object {
      "condition": 0,
      "value": 2000,
    },
    "status": "Ongoing",
    "type": "Manga",
  },
}
`;
